# minbif

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.options.defaults  Makefile.parser  README  bitlbee.conf  minbif.conf  minbif.motd  valgrind-suppressions  valgrind.sh
cmake-modules/: FindPAM.cmake
debian/: README.Debian  changelog  control  copyright  dirs  rules
doc/: Doxyfile  minbif.service  minbif.xinetd
man/: minbif.8
plugins/: CMakeLists.txt
plugins/coincoin/: CMakeLists.txt  README  coincoin.c  coincoin.h  connection.c  connection.h  message.c  message.h
plugins/gayattitude/: CMakeLists.txt  TODO  connection.c  connection.h  ga_account.c  ga_account.h  ga_buddy.c  ga_buddy.h  ga_buddylist.c  ga_buddylist.h  ga_message.c  ga_message.h  ga_parsing.c  ga_parsing.h  gayattitude.c  gayattitude.h
plugins/lib/: CMakeLists.txt  http.c  http.h
scripts/irssi/: im_cacacam.pl  im_join_notice.pl  im_typing_notice.pl  im_utils.pm  minbif_rename_facebook.pl  minbif_rename_gplus.pl
scripts/weechat/: facebook_rename.py  facebook_rename_minbif.py  im_typing_notice.rb
src/: CMakeLists.txt  bitlbee.cpp  bitlbee.h  caca_image.cpp  caca_image.h  callback.cpp  callback.h  config.cpp  config.h  database.cpp  database.h  entity.h  log.cpp  log.h  minbif.cpp  minbif.h  sighandler.cpp  sighandler.h  util.cpp  util.h  version.h
src/core/: caca_image.cpp  caca_image.h  callback.cpp  callback.h  config.cpp  config.h  exception.h  log.cpp  log.h  minbif.cpp  minbif.h  mutex.cpp  sighandler.cpp  sighandler.h  sockwrap.cpp  sockwrap.h  sockwrap_plain.cpp  sockwrap_plain.h  sockwrap_tls.cpp  util.cpp  util.h  version.h
src/im/: account.cpp  account.h  auth.cpp  auth.h  auth_connection.cpp  auth_connection.h  auth_local.cpp  auth_local.h  auth_pam.cpp  auth_pam.h  buddy.cpp  buddy.h  conversation.cpp  conversation.h  ft.cpp  ft.h  im.cpp  im.h  media.cpp  media.h  plugin.cpp  plugin.h  protocol.cpp  protocol.h  purple.cpp  purple.h  purple_handler.cpp  purple_handler.h  request.cpp  request.h  roomlist.cpp  roomlist.h  user.cpp  user.h  user_local.cpp  user_local.h  user_pam.cpp  user_pam.h
src/irc/: buddy.cpp  buddy.h  buddy_icon.cpp  buddy_icon.h  channel.cpp  channel.h  chat_buddy.cpp  chat_buddy.h  cmds.cpp  cmds_accounts.cpp  cmds_channels.cpp  conv_entity.cpp  conv_entity.h  conversation_channel.cpp  conversation_channel.h  dcc.cpp  dcc.h  irc.cpp  irc.h  message.cpp  message.h  nick.cpp  nick.h  replies.h  rootnick.cpp  rootnick.h  server.cpp  server.h  settings.cpp  settings.h  status_channel.cpp  status_channel.h  unknown_buddy.cpp  unknown_buddy.h  user.cpp  user.h
src/server_poll/: daemon_fork.cpp  daemon_fork.h  inetd.cpp  inetd.h  poll.cpp  poll.h
src/sockwrap/: sockwrap.cpp  sockwrap.h  sockwrap_plain.cpp  sockwrap_plain.h  sockwrap_tls.cpp  sockwrap_tls.h
tests/: Makefile  account.py  config.py  config.py.example  run_tests.sh  structs.py  test.py  test_accounts.py  test_buddylist.py
